Move to Java 11 and remove dependency on GBIF parsers which do not work with Java 11. Fixes #241