@@ -27,7 +27,7 @@
     <properties>
         <!-- build settings -->
         <minimumMavenVersion>3.3</minimumMavenVersion>
-        <jdkLevel>1.8</jdkLevel>
+        <jdkLevel>11</jdkLevel>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -36,27 +36,30 @@
             the BOM for jersey and jackson. Before adding a specific version here make sure it is not already covered
             by these BOMs (use the right versions):
 
-            Main Dropwizard BOM: https://github.com/dropwizard/dropwizard/blob/v1.3.12/dropwizard-bom/pom.xml
+            Main two Dropwizard BOMs:
+            https://github.com/dropwizard/dropwizard/blob/v1.3.12/dropwizard-bom/pom.xml
+            io.dropwizard:dropwizard-dependencies
             Which also imports the Jersey BOM: https://github.com/jersey/jersey/blob/2.25.1/bom/pom.xml
             and Jackson BOM: https://github.com/FasterXML/jackson-bom/blob/jackson-bom-2.9.6/pom.xml
 
             These BOMs manage dependency
             versions for many things including: commons-lang3, guava, jersey, commons-text, servlet api, httpclient,
             liquibase, freemarker, jetty, jackson, metrics, etc. -->
+        <antlr.version>4.7.2</antlr.version>
         <assertj.version>3.11.1</assertj.version>
-        <!-- 1.1.0-SNAPSHOT released on commit 1d5bf0e hosted at GBIF -->
-        <citeproc.version>1.1.0-1d5bf0e</citeproc.version>
-        <citeproc-styles.version>1.0</citeproc-styles.version>
+        <!-- 2.0.0j11 is a modified 2.0.0 release using GraalVM 2.3.0 with ASM 7.x hosted at GBIF -->
+        <citeproc.version>2.0.0j11</citeproc.version>
+        <citeproc-styles.version>2.0.0</citeproc-styles.version>
         <commons-collections4.version>4.3</commons-collections4.version>
         <commons-compress.version>1.19</commons-compress.version>
         <commons-io.version>2.6</commons-io.version>
-        <dropwizard.version>1.3.14</dropwizard.version>
+        <dropwizard.version>2.0.0-rc13</dropwizard.version>
         <dwc-api.version>1.23</dwc-api.version>
         <elasticsearch.version>6.5.1</elasticsearch.version>
         <embedded-elasticsearch.version>2.8.0</embedded-elasticsearch.version>
         <fastutil.version>8.3.0</fastutil.version>
-        <gbif-api.version>0.83</gbif-api.version>
-        <gbif-parser.version>0.42</gbif-parser.version>
+        <gbif-api.version>0.99</gbif-api.version>
+        <graalvm.version>19.3.0</graalvm.version>
         <hikaricp.version>3.3.1</hikaricp.version>
         <hk2.version>2.5.0-b32</hk2.version>
         <!-- even though managed in DW BOM, it conflicts with ES BOM and we gotta manage this manually -->
@@ -65,41 +68,42 @@
         <java-diff-utils.version>4.0</java-diff-utils.version>
         <javax.ws.rs-api.version>2.0.1</javax.ws.rs-api.version>
         <javers.version>5.6.3</javers.version>
+        <jbibtex.version>1.0.17</jbibtex.version>
         <jjwt.version>0.10.7</jjwt.version>
         <junit.version>4.12</junit.version>
         <kryo-serializers.version>0.42</kryo-serializers.version>
         <kryo.version>4.0.2</kryo.version>
-        <logstash-logback.version>5.1</logstash-logback.version>
+        <logstash-logback.version>6.2</logstash-logback.version>
         <mapdb.version>3.0.5</mapdb.version>
-        <mockito.version>2.12.0</mockito.version>
+        <mockito.version>3.1.0</mockito.version>
         <mybatis.version>3.5.2</mybatis.version>
         <name-parser.version>3.4.2-SNAPSHOT</name-parser.version>
         <neo4j-algorithms.version>3.4.0.0</neo4j-algorithms.version>
-        <neo4j.version>3.4.14</neo4j.version>
+        <neo4j.version>3.4.17</neo4j.version>
         <postgresql.version>42.2.8</postgresql.version>
         <pgjdbc-ng.version>0.8.3</pgjdbc-ng.version>
-        <stax2.version>3.1.4</stax2.version>
+        <stax2.version>4.2</stax2.version>
         <tika.version>1.22</tika.version>
-        <twelvemonkeys.version>3.4.1</twelvemonkeys.version>
+        <twelvemonkeys.version>3.4.2</twelvemonkeys.version>
         <validation-api.version>2.0.0.Final</validation-api.version>
         <woodstox.version>4.4.1</woodstox.version>
         <imgscalr.version>4.2</imgscalr.version>
         <univocity-parsers.version>2.8.3</univocity-parsers.version>
         <!-- Maven plugin versions. Check for available updates: mvn versions:display-plugin-updates -->
-        <exec-maven-plugin.version>1.2.1</exec-maven-plugin.version>
-        <maven-clean-plugin.version>3.0.0</maven-clean-plugin.version>
-        <maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
-        <maven-dependency-plugin.version>3.0.1</maven-dependency-plugin.version>
+        <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
+        <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
+        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+        <maven-dependency-plugin.version>3.1.1</maven-dependency-plugin.version>
         <maven-enforcer-plugin.version>1.4.1</maven-enforcer-plugin.version>
         <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
-        <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
+        <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
         <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
-        <maven-resources-plugin.version>3.0.2</maven-resources-plugin.version>
-        <maven-shade-plugin.version>3.0.0</maven-shade-plugin.version>
-        <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
-        <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
-        <maven-git-commit-id-plugin.version>3.0.0</maven-git-commit-id-plugin.version>
-        <versions-maven-plugin.version>2.4</versions-maven-plugin.version>
+        <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
+        <maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>
+        <maven-source-plugin.version>3.2.0</maven-source-plugin.version>
+        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+        <maven-git-commit-id-plugin.version>4.0.0</maven-git-commit-id-plugin.version>
+        <versions-maven-plugin.version>2.7</versions-maven-plugin.version>
 
         <!-- default maven properties to define the postgres server for running tests.
         To use a different server please activate a personal profile -->
@@ -262,8 +266,12 @@
                 <version>${dropwizard.version}</version>
             </dependency>
 
-            <!-- Dropwizard Bill of materials. Imports all versions just like Dropwizard uses. See properties
-                section above for details! -->
+            <!-- Dropwizard Bill of materials.
+                 There are 2 BOMs now: https://github.com/dropwizard/dropwizard/pull/2897
+                 One for the dropwizard modules, one for the transitive dependencies to external projects.
+                Imports all versions just like Dropwizard uses.
+                See properties section above for details!
+            -->
             <dependency>
                 <groupId>io.dropwizard</groupId>
                 <artifactId>dropwizard-bom</artifactId>
@@ -271,7 +279,13 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-
+            <dependency>
+                <groupId>io.dropwizard</groupId>
+                <artifactId>dropwizard-dependencies</artifactId>
+                <version>${dropwizard.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <!-- HK2 dependency injection - follow closely the version used by Jersey via Dropwizard -->
             <dependency>
                 <groupId>org.glassfish.hk2</groupId>
@@ -373,11 +387,6 @@
                 <artifactId>name-parser</artifactId>
                 <version>${name-parser.version}</version>
             </dependency>
-            <dependency>
-                <groupId>org.gbif</groupId>
-                <artifactId>gbif-parsers</artifactId>
-                <version>${gbif-parser.version}</version>
-            </dependency>
 
             <!-- mybatis / DB -->
             <dependency>
@@ -418,6 +427,13 @@
                 <groupId>org.neo4j</groupId>
                 <artifactId>neo4j-cypher</artifactId>
                 <version>${neo4j.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <!-- uses old ASM version and we dont use it anyways -->
+                        <groupId>org.neo4j</groupId>
+                        <artifactId>neo4j-codegen</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.neo4j</groupId>
@@ -446,6 +462,12 @@
                 <groupId>de.javakaffee</groupId>
                 <artifactId>kryo-serializers</artifactId>
                 <version>${kryo-serializers.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.esotericsoftware</groupId>
+                <artifactId>reflectasm</artifactId>
+                <version>1.11.9</version>
+                <type>bundle</type>
             </dependency>
 
             <!-- elastic -->
@@ -524,6 +546,26 @@
                 <groupId>de.undercouch</groupId>
                 <artifactId>citeproc-java</artifactId>
                 <version>${citeproc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jbibtex</groupId>
+                <artifactId>jbibtex</artifactId>
+                <version>${jbibtex.version}</version>
+            </dependency>
+            <!-- required by jbibtex -->
+            <dependency>
+                <groupId>org.antlr</groupId>
+                <artifactId>antlr4-runtime</artifactId>
+                <version>${antlr.version}</version>
+            </dependency>
+
+            <!--
+            citeproc depends on graalvm.js 19.2 that includes an old ASM 6.x version. Force a newer one
+            -->
+            <dependency>
+                <groupId>org.graalvm.js</groupId>
+                <artifactId>js</artifactId>
+                <version>${graalvm.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.citationstyles</groupId>
@@ -615,8 +657,7 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven-compiler-plugin.version}</version>
                     <configuration>
-                        <source>${jdkLevel}</source>
-                        <target>${jdkLevel}</target>
+                        <release>${jdkLevel}</release>
                         <showDeprecation>true</showDeprecation>
                         <showWarnings>true</showWarnings>
                     </configuration>
@@ -625,6 +666,14 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
                     <version>${maven-dependency-plugin.version}</version>
+                    <!-- following is needed until 3.1.2 is released -->
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.apache.maven.shared</groupId>
+                            <artifactId>maven-dependency-analyzer</artifactId>
+                            <version>1.11.1</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -675,7 +724,10 @@
                         <!-- mem settings may not be necessary but the 3rd arg is. See here: -->
                         <!-- https://issues.apache.org/jira/browse/SUREFIRE-1588 -->
                         <!-- And here: https://talk.openmrs.org/t/error-could-not-find-or-load-main-class-org-apache-maven-surefire-booter-forkedbooter/20509 -->
-                        <argLine>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
+                        <argLine>
+                            -Djdk.net.URLClassPath.disableClassPathURLCheck=true
+                            --illegal-access=permit
+                        </argLine>
                         <runOrder>random</runOrder>
                     </configuration>
                 </plugin>
@@ -688,6 +740,7 @@
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>exec-maven-plugin</artifactId>
                     <version>${exec-maven-plugin.version}</version>
+                    <!-- TODO: https://medium.com/@Leejjon_net/migrate-a-jersey-based-micro-service-to-java-11-and-deploy-to-app-engine-7ba41a835992#ff49 -->
                     <configuration>
                         <mainClass>${mainClass}</mainClass>
                         <arguments>
@@ -788,6 +841,9 @@
                         <redirectTestOutputToFile>true</redirectTestOutputToFile>
                         <!-- use default JVM settings <argLine>-Xmx256m</argLine> -->
                         <runOrder>random</runOrder>
+                        <argLine>
+                            --illegal-access=permit
+                        </argLine>
 
                         <includes>
                             <!-- include regular unit tests -->
@@ -834,10 +890,6 @@
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
-                <configuration>
-                    <source>${jdkLevel}</source>
-                    <target>${jdkLevel}</target>
-                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-source-plugin</artifactId>
